config/registry-deployment-tls.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-docker-registry-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: private-docker-registry-cache
  template:
    metadata:
      labels:
        app: private-docker-registry-cache
    spec:
      containers:
      - name: private-docker-registry-cache
        image: redis
        ports:
        - containerPort: 6379
        command:
        - redis-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: private-docker-registry
  name: private-docker-registry
  namespace: private-docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: private-docker-registry
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: private-docker-registry
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: private-docker-registry
        image: registry:2
        imagePullPolicy: Always
        name: private-docker-registry
        ports:
        - containerPort: 5000
          name: 5000tls
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        volumeMounts:
        - name: config
          mountPath: /etc/docker/registry
          readOnly: true
        - name: htpasswd
          mountPath: /auth
        - name: certs
          mountPath: /certs
          readOnly: true
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: config
          configMap:
            name: docker-registry-config
            defaultMode: 256
            optional: false
        - name: htpasswd
          secret:
            secretName: htpasswd
            items:
              - key: HTPASSWD
                path: htpasswd
        - name: certs
          secret:
            secretName: domain-tls
---
