config/registry-services-tls.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: private-docker-registry
spec:
  selector:
    app: private-docker-registry
  ports:
  - port: 443
    targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: private-docker-registry-cache
spec:
  selector:
    app: private-docker-registry-cache
  ports:
  - port: 6379
    targetPort: 6379
---
