config/registry-ingress-no_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: private-docker-registry
  namespace: private-docker-registry
spec:
  ingressClassName: nginx
  rules:
  - host: registry.k8.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: private-docker-registry
            port:
              number: 5000
